blog-django-kustomize/allinone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openshift-blog
spec:
  replicas: 3
---
apiVersion: v1
kind: Service
metadata:
  name: openshift-blog
spec:
  ports:
  - name: 8080-tcp
    port: 8070
