blog-django-kustomize/blog-django-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-blog
spec:
  host: openshift-blog-blog-django.apps-crc.testing
  port:
    targetPort: 8080-tcp
  subdomain: ""
  to:
    kind: Service
    name: openshift-blog
    weight: 100
  wildcardPolicy: None
